--- a/views/user/userAdd.ejs
+++ b/views/user/userAdd.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/header', { title: "Create new User" }) %> 
+    <%- include('../partials/header', { title: "Create New User" }) %> 
 <body>
     <%- include('../partials/navbar') %> 
 
