--- a/views/course/courseAdd.ejs
+++ b/views/course/courseAdd.ejs
@@ -1,36 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <%- include('../partials/header', { title: "Create New Course" }) %> 
 <body>
-    <h1>FORM ADD COURSE</h1>
-    <form action="/courses/add" method="post">
-        Name Of a Course: <br>
-        <input type="text" name="name"> <br>
+    <%- include('../partials/navbar') %> 
+    <div class="container mt-4 mb-4">
+        <center><h4>Create New Course</h4></center>
+        <hr>
 
-        Description: <br>
-        <input type="textarea" name="description"> <br>
+        <% if(errors) { %>
+            <div class="alert alert-warning" role="alert">
+                <% errors.split(",").forEach(el => { %>
+                    <%= el %> <br>
+                <% }) %> 
+            </div>
+        <% } %> 
 
-        Price: <br>
-        <input type="text" name="price"> <br>
-
-        Duration: <br>
-        <input type="text" name="duration"> <br>
-
-        Image url : <br>
-        <input type="text" name="imageUrl"> <br>
-
-        <select name="category" id="">
-        <% ["IT and Software", "Business", "Photography and Video", "Health and Fitness", "Music" ].forEach(c => { %>
-            <option value="<%= c %>"><%= c %></option>
-        <% }) %> 
-        </select><br>
-
-        <button type="submit">Submit</button>
-    </form>
+        <form action="/courses/add" method="post" autocomplete="off">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="name">Name Of a Course</label>
+                      <input type="text" name="name" class="form-control" id="email">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="imageUrl">Image Url</label>
+                        <input type="text" name="imageUrl" class="form-control" id="imageUrl">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="price">Price</label>
+                      <input type="number" name="price" class="form-control" id="price">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="duration">Duration</label>
+                        <input type="number" name="duration" class="form-control" id="duration">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="description">Description</label>
+                      <textarea name="description" id="description" cols="30" rows="5" class="form-control"></textarea>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="category">Category</label>
+                        <select name="category" id="category" class="form-control">
+                            <option disabled selected>--- Select Category ---</option>
+                        <% ["IT and Software", "Business", "Photography and Video", "Health and Fitness", "Music" ].forEach(c => { %>
+                            <option value="<%= c %>"><%= c %></option>
+                        <% }) %> 
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group mt-3">
+                <a href="/courses" class="btn btn-danger btn-sm">Cancel</a>
+                <button type="submit" class="btn btn-primary btn-sm float-right">Add</button>
+            </div>
+        </form>
+    </div>
+    <%- include('../partials/footer') %> 
 </body>
 </html>
