--- a/views/user/userEdit.ejs
+++ b/views/user/userEdit.ejs
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group mt-3">
                 <a href="/users" class="btn btn-danger btn-sm">Cancel</a>
-                <button type="submit" class="btn btn-primary btn-sm float-right">Add</button>
+                <button type="submit" class="btn btn-primary btn-sm float-right">Update</button>
             </div>
         </form>
     </div>
