--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/header', { title: "Login" }) %> 
+    <%- include('../partials/header', { title: "Register" }) %> 
 <body>
     <div class="container">
         <center><h4 class="mt-5">FORM REGISTER</h4></center>
