--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,8 +26,11 @@
             <a class="dropdown-item" href="/users/add">Add New</a>
           </div>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="">Keranjang</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/auth/logout">Logout</a>
         </li>
       </ul>
     </div>
