--- a/views/listCourseByUser.ejs
+++ b/views/listCourseByUser.ejs
@@ -1,1 +1,39 @@
-<h1>Ini List By User</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <%- include('./partials/header', { title: "List Your Course" }) %> 
+<body>
+    <%- include('./partials/navbar') %> 
+
+    <div class="container mt-4 mb-4">
+        <center><h4>List Your Course</h4></center>
+        <hr>
+
+        <div class="alert alert-warning alert-dismissible fade show mt-4 mb-4" role="alert">
+            <% if(info.length > 0) { %>
+                Hello you have bought <%= info.length %> courses 
+            <% } else { %>
+                You still haven't bought any courses
+            <% } %> 
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+
+        <div class="row">
+            <% transactionDetails.forEach(el => { %>
+                <div class="col-md-4 mb-3">
+                    <div class="card" style="width: 22rem;">
+                        <img class="card-img-top" src="<%= el.Course.imageUrl %>" alt="<%= el.name %>">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= el.Course.name %></h5>
+                            <p class="card-text"><%= el.Course.description %></p>
+                        </div>
+                    </div>
+                </div>
+           <% }); %> 
+        </div>
+    </div>
+
+    <%- include('./partials/footer') %> 
+</body>
+</html>
