--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -44,7 +44,7 @@
             </li>
            <% } %> 
           <li class="nav-item">
-            <a class="nav-link" href="/auth/logout">Logout</a>
+            <a class="nav-link" href="/logout">Logout</a>
           </li>
         <% } %> 
 
